--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
 arrow==0.14.7
 certifi==2020.6.20
+cffi==1.14.2
 chardet==3.0.4
+cryptography==3.0
+defusedxml==0.6.0
 ics==0.7
 idna==2.10
+importlib-metadata==1.7.0
+jira==2.0.0
+keyring==21.3.0
+oauthlib==3.1.0
+pbr==5.4.5
+pycparser==2.20
+PyJWT==1.7.1
 python-dateutil==2.8.1
+pywin32-ctypes==0.2.0
 requests==2.24.0
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
 six==1.15.0
 TatSu==4.4.0
 urllib3==1.25.10
+zipp==3.1.0
